<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ChallengeTwo.Mazad_ch2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/ch2"
                app:titleTextColor="@color/white" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="center"
                android:text="Next"

                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="17sp"
        android:layout_marginStart="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/what_is_the_maximum_raise_reached"
        android:textColor="@color/blacky_teal"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:max="35"
        android:padding="30dp"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/tv_seekbar_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/tv_seekbar_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="5"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/iv_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_before"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <ImageButton
        android:id="@+id/iv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_teal"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="@+id/tv_seekbar_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_seekbar_progress"
        app:layout_constraintTop_toTopOf="@+id/tv_seekbar_progress" />

    <ImageButton
        android:id="@+id/iv_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_teal"
        android:src="@drawable/ic_before"
        app:layout_constraintBottom_toBottomOf="@+id/tv_seekbar_progress"
        app:layout_constraintEnd_toStartOf="@+id/tv_seekbar_progress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_seekbar_progress" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="20sp"
        android:layout_marginTop="40dp"
        android:text="@string/who_will_do_the_challenge"
        android:textColor="@color/blacky_teal"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/tv_seekbar_progress" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_timer"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rb_first_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/player_one"
            android:textColor="@color/blacky_teal"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_second_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/player_two"
            android:textColor="@color/blacky_teal"
            android:textSize="20sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/tv_start_timer"
        android:layout_width="95dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_timer"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginStart="17dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_timer"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/iv_timer"
        app:layout_constraintTop_toBottomOf="@+id/iv_timer"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/iv_timer"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:src="@drawable/timer"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"

        app:layout_constraintBottom_toTopOf="@+id/tv_start_timer"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:layout_marginTop="40dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>