<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.startEnd.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/the_thirty_challenge"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toTopOf="@+id/toolbar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.appbar.AppBarLayout>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="10dp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:text="@string/player_one"
                android:textColor="@color/grey_teal"
                app:layout_constraintBottom_toTopOf="@+id/et_firstPlayer"
                app:layout_constraintStart_toStartOf="@+id/et_firstPlayer"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/et_firstPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/et_background"
                android:padding="13dp"
                android:paddingStart="50dp"
                android:textColor="@color/blacky_teal"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="10dp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:text="@string/player_two"
                android:textColor="@color/grey_teal"
                app:layout_constraintBottom_toTopOf="@+id/et_secondPlayer"
                app:layout_constraintStart_toStartOf="@+id/et_secondPlayer"

                app:layout_constraintTop_toBottomOf="@+id/et_firstPlayer" />

            <EditText
                android:id="@+id/et_secondPlayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:background="@drawable/et_background"
                android:padding="13dp"
                android:paddingStart="50dp"
                android:textColor="@color/blacky_teal"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_next"
                app:layout_constraintEnd_toEndOf="@+id/et_firstPlayer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/et_firstPlayer"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="@drawable/btn_background"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_secondPlayer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>